--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
+@import './themes.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    @apply theme-standard;
+  }
+}
 
 /* Optional: smooth fonts */
 html, body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
